--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!--
  * @Author: lipengcheng
  * @Date: 2023-07-24 15:35:26
- * @LastEditTime: 2023-07-24 17:08:18
+ * @LastEditTime: 2023-07-25 17:02:57
  * @Description: 
 -->
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,6 +21,7 @@
   <script type="text/javascript">
     injectSwitchSystem.init({
       container: document.getElementById('ZonstCommonSwitchSystem'),
+      env: true, // production 传true，否则传false
     })
   </script>
 </html>
